--- a/styles.css
+++ b/styles.css
@@ -709,6 +709,11 @@ section{
 .btn-primary {
     background-color: #e84393;
     border-color: #b32a83;
+    color: white;
+    font-size: 20px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 230px;
 }
 
 .btn-primary:hover {
